# cpp-rs-driver

./: .gitignore  CMakeLists.txt  Doxyfile.in  MAINTENANCE.md  Makefile  README.md
.github/workflows/: build-cpack-packages.yml  build-lint-and-test.yml  docs-pages.yaml  docs-pr.yaml  pkg.yml  release-upload-packages.yml
ci/: ccm  generate-build-info.sh
cmake/: CMakeCargo.cmake  Dependencies.cmake  ExternalProject-OpenSSL.cmake  FindOPENSSL.cmake  FindOpenSSL.cmake  RunMacProductbuild.cmake  Windows-Environment.cmake
docs/: Makefile  pyproject.toml
docs/source/: conf.py  contents.rst  index.md
docs/source/_static/: custom.css
docs/source/api/: index.rst
docs/source/topics/: architecture-overview.md  building.md  getting-started.md  installation.md  testing.md
docs/source/topics/configuration/: load-balancing.md  nonsupported.md  performance-tips.md  retry-policies.md
docs/source/topics/observability/: metrics.md
docs/source/topics/security/: authentication.md  tls.md
docs/source/topics/using/: binding-parameters.md  client-side-timestamps.md  consistency.md  handling-results.md  schema-metadata.md
docs/source/topics/using/data-types/: index.md  tuples.md  user-defined-types.md  uuids.md
examples/execution_profiles/: execution_profiles.c
examples/perf/: perf.c
examples/result_iteration_bench/: .gitignore  CMakeLists.txt  result_iteration_bench.c
examples/schema_meta/: schema_meta.c
include/: cassandra.h  cassandra_deleted_functions.h  deleted_functions.h
milestone-sync/: config.yaml
packaging/smoke-test-app/: CMakeLists.txt  Makefile  docker-compose.yml
packaging/smoke-test-app/src/: smoke_test.c
scylla-rust-wrapper/: CMakeLists.txt  Cargo.toml  cassandra.pc.in  scylla-cpp-driver.pc.in  scylla-cpp-driver_static.pc.in  scylladb.pc.in  scylladb_static.pc.in
scylla-rust-wrapper/.cargo/: config.toml
scylla-rust-wrapper/src/: api.rs  argconv.rs  batch.rs  binding.rs  cass_error.rs  cass_types.rs  cluster.rs  collection.rs  config_value.rs  exec_profile.rs  future.rs  host_listener.rs  integration_testing.rs  iterator.rs  lib.rs  load_balancing.rs  logging.rs  metadata.rs  misc.rs  prepared.rs  query_result.rs  retry_policy.rs  runtime.rs  ser_de_tests.rs  session.rs  ssl.rs  statement.rs  testing.rs  timestamp_generator.rs  uuid.rs
scylla-rust-wrapper/src/cql_types/: collection.rs  data_type.rs  inet.rs  mod.rs  tuple.rs  user_type.rs  uuid.rs  value.rs
scylla-rust-wrapper/src/statements/: batch.rs  mod.rs  prepared.rs  statement.rs
scylla-rust-wrapper/src/testing/: integration.rs  mod.rs  ser_de_tests.rs  utils.rs
scylla-rust-wrapper/tests/integration/: consistency.rs  main.rs  session.rs  utils.rs
src/: testing.cpp  testing.hpp  testing_rust_impls.h  testing_unimplemented.cpp
tests/: CMakeLists.txt
tests/src/integration/: CMakeLists.txt  integration.hpp  logger.cpp
tests/src/integration/ccm/: bridge.cpp  process.cpp
tests/src/integration/objects/: cluster.hpp
tests/src/integration/tests/: test_consistency.cpp  test_dc_aware_policy.cpp  test_exec_profile.cpp  test_heartbeat.cpp  test_metrics.cpp  test_prepared_metadata.cpp  test_timestamp.cpp
