[project]
name = "cpp-rs-driver-docs"
version = "0.1.0"
description = "ScyllaDB CPP RS Driver Documentation"
authors = [{ name = "ScyllaDB Documentation Contributors" }]
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.18.0",
    "sphinx-scylladb-theme>=1.8.10",
    "myst-parser>=3.0.1",
    "sphinx-autobuild>=2024.4.19",
    "sphinx>=7.3.7",
    "sphinx-multiversion-scylla>=0.3.4",
    "sphinx-sitemap>=2.6.0",
    "redirects-cli>=0.1.3",
    "breathe==4.35.0",
    "sphinx-scylladb-markdown>=0.1.2",
]
